test_apps/test-typechecker/fail/ac/principalundefined.app
application test

section principal

  principal is User with credentials name